--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8695,7 +8695,8 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  # RAJ DECISION
 
  RAJ_princely_state_agency:0 "Princely States"
-
+ 
+ # Viceroy Executive Council
  RAJ_viceroy_executive_council_category:0 "Viceroy's Executive Council Decisions"
  RAJ_viceroy_executive_council_category_desc:0 "Established as an advisory council by the Regulating Act of 1773 and transformed into a functioning cabinet by the Indian Councils Act of 1861, the Viceroy's Executive Council is the effective government of the Raj, with each member having an assigned portfolio such as revenue, military, law, finance, home and public works. The Commander-in-Chief also sits on the Council as an extraordinary member.\n\nIf deemed necessary, the Viceroy is allowed to overrule the Council on affairs. The Indian Councils Act 1909, also known as the §YMorley-Minto Reforms§!, enabled the Viceroy to nominate one Indian member to the Executive Council, leading to the appointment of §YSatyendra Prasanna Sinha§! as the first Indian member.\n"
 
@@ -8736,6 +8737,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  RAJ_supress_socialists_groups:0 "Supress Socialists Groups"
  RAJ_seize_assets_of_seditious_individuals:0 "Seize Assets of Seditious Individuals"
  
+ # Survey of India
  RAJ_survey_of_india_category:0 "Survey of India"
 
  RAJ_terrain_analysis:0 "Conduct Terrain Analysis"
@@ -8748,6 +8750,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  RAJ_supply_lines_optimization_desc:0 "By commissioning the Survey of India to help us optimise the supply lines for the Indian Army, we will be able to defend the Raj more effectively."
  RAJ_supply_lines_optimization_reward:0 "Modify '§YIndian Army§!' by:\nSupply Combat Penalties on Core Territory:§G -2.0%§!\n\nYou can select this £GFX_decision_icon_small §YDecision§! up to §Y5§! times."
  
+ # Montagu Chelmsford Reforms
  RAJ_montagu_chelmsford_reforms_category:0 "Montagu-Chelmsford Reforms"
 
  RAJ_establish_committee_on_home_administration:0 "Establish the Committee on Home Administration"
@@ -8762,7 +8765,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  RAJ_establish_southborough_franchise_committee_reward:0 "The §YSouthborough Franchise Committee§! will now be established!"
  southborough_franchise_committee_established:0 "§YSouthborough Franchise Committee Established§!"
 
-
+ #Indian Economy
  RAJ_indian_economy_category:0 "Indian Economy"
 
  RAJ_expand_civilian_industry:0 "Expand Civilian Industry"
@@ -8771,6 +8774,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  RAJ_expand_military_industry:0 "Expand Military Industry"
  RAJ_expand_military_industry_desc:0 "We must urge the Ordnance Factory Board to build new arsenals in preparation for the upcoming conflict."
 
+ # Propaganda Campaigns
  RAJ_indian_diplomacy_category:0 "Propaganda Campaigns"
  RAJ_indian_diplomacy_category_desc:0 "§YPropaganda Campaigns§! in the Raj are one of the many ways in which our administration maintains its hold on the subcontinent. They are essential to keep the Indian people united and to ensure their support of the [ENG.GetFlag] §YBritish rule§!. However, we cannot run too many §YPropaganda Campaigns§! at once, as this would overload the Indian population, therefore we are limited to §Rthree Propaganda Campaigns§! at a time.\n\nCurrently, we are leading [?indian_diplomacy|Y0]/§Y3 Propaganda Campaigns§!.\n"
  indian_diplomacy_under_3_available:0 " Less than §Y3§! active §YPropaganda Campaigns§!"
@@ -8793,20 +8797,63 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  who_got_money_gun_uniform_desc:0 "\n§Y''Who Got that Money, Gun and Uniform? The One Who Shall Join the Army!''§!"
  invest_in_victory:0 "Invest in Victory"
  invest_in_victory_desc:0 "\n§Y''Invest in Victory, this shall help with fighting''§!"
-
+ 
+ # Extrasubcontinental Theaters
  extrasubcontinental_theaters_category:0 "Extrasubcontinental Theaters"
+
  decision_cost_CP_25_PP_10:0 "£command_power  §Y15§! £pol_power  §Y10§!"
  decision_cost_CP_25_PP_10_blocked:0 "£command_power  §R15§! £pol_power  §Y10§!"
  decision_cost_CP_25_PP_10_tooltip:0 "It costs £command_power  §Y15§! and £pol_power  §Y10§! to take the decision"
+
  currently_preparing_a_new_theater:0 " Currently Preparing a New Theater"
  recently_prepared_a_new_theater:0 " Recently Prepared a New Theater"
+
  african_theater:0 "Prepare the African Theatre"
  european_theater:0 "Prepare the European Theatre"
  ottoman_theater:0 "Prepare the Ottoman Theatre"
+ 
+ # Madras Rebellion
+ RAJ_madras_rebellion_category:0 "[RAJ_madras_rebellion_status]"
+ malabar_and_rampa:0 "Malabar and Rampa Rebellions"
+ malabar_rebellion:0 "Malabar Rebellion"
+ rampa_rebellion:0 "Rampa Rebellion"
+ RAJ_madras_rebellion_category_desc:0 "[RAJ_madras_rebellion_introduction][malabar_strength][rampa_strength]"
+ RAJ_madras_rebellion_introduction:0 "Madras Rebellion description here"
+ malabar_strength:0 "\n\nCurrently, the Malabar Rebellion has a strength of [?malabar_rebellion_strength|Y%%]."
+ rampa_strength:0 "\n\nCurrently, the Rampa Rebellion has a strength of [?rampa_rebellion_strength|Y%%]."
 
- reinforce_the_caste_system:0 "Reinforce the Caste System"
- fight_against_the_caste_system:0 "Fight Against the Caste System"
- RAJ_arrest_political_leaders:0 "Arrest Political Leaders"
+ malabar_rebellion_started:0 "Malabar Rebellion"
+ malabar_rebellion_strength_over_0:0 "Malabar Rebellion Strength > §Y0.00%§!"
+ malabar_rebellion_strength_below_50:0 "Malabar Rebellion Strength < §Y50.00%§!"
+ malabar_rebellion_strength_below_15:0 "Malabar Rebellion Strength < §Y15.00%§!"
+ 
+ RAJ_malabar_agitation_mission:0 "Strengthening of the Malabar Rebellion"
+ malabar_rebellion_strength_5:0 "The Malabar Rebellion will gain §Y5.00%§! of Strength.\n\n"
+ crushed_malabar_rebellion:0 "Has Crushed the Malabar Rebellion"
+
+ RAJ_send_governments_troops:0 "Send Government Troops"
+ has_sent_governments_troops:0 "Has Sent Government Troops"
+ malabar_rebellion_strength_remove_5:0 "The Malabar Rebellion will lose §Y5.00%§! of Strength.\n"
+ decision_cost_PP_10_CP_15:0 "£command_power §Y15§! £pol_power  §Y10§!"
+ decision_cost_PP_10_CP_15_blocked:0 "£command_power §R15§! £pol_power  §Y10§! "
+ decision_cost_PP_10_CP_15_tooltip:0 "It costs £command_power §Y15§! and £pol_power  §Y10§! to take the decision"
+
+ RAJ_form_the_malabar_special_police:0 "Form the Malabar Special Police"
+ malabar_rebellion_strength_remove_15:0 "The Malabar Rebellion will lose §Y15.00%§! of Strength.\n\n"
+ decision_cost_PP_25_CP_10:0 "£command_power §Y10§! £pol_power  §Y25§!"
+ decision_cost_PP_25_CP_10_blocked:0 "£command_power §R10§! £pol_power  §Y25§!"
+ decision_cost_PP_25_CP_10_tooltip:0 "It costs £command_power §Y10§! and £pol_power  §Y25§! to take the decision"
+ fire_only_once_reward:0 "§RThis £decision_icon_small §YDecision§! is only selectable once.§!"
+
+ RAJ_enlist_from_the_hindu_community:0 "Enlist from the Hindu Community"
+
+ RAJ_crush_the_malabar_rebellion:0 "Crush the Malabar Rebellion"
+ decision_cost_PP_25_CP_25:0 "£command_power §Y25§! £pol_power  §Y25§!"
+ decision_cost_PP_25_CP_25_blocked:0 "£command_power §R25§! £pol_power  §Y25§!"
+ decision_cost_PP_25_CP_25_tooltip:0 "It costs £command_power §Y25§! and £pol_power  §Y25§! to take the decision"
+ crushed_malabar_rebellion_reward:0 "§RWe will round up the last resistance cells and close this dark chapter in British India's history.§!\n"
+
+ # Old Content #
 
  RAJ_raj_war_timer:0 "Quagmire of the Raj War"
  RAJ_british_remnants_flag:0 "British Remnants in Raj"
