--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -670,6 +670,7 @@
  VICTORY_POINTS_12338: "Jalpaiguri"
  VICTORY_POINTS_9973: "Gorakhpur"
  VICTORY_POINTS_10772: "Ferozepore"
+ VICTORY_POINTS_9588: "Banja Luka"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
