--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -671,6 +671,7 @@
  VICTORY_POINTS_9973: "Gorakhpur"
  VICTORY_POINTS_10772: "Ferozepore"
  VICTORY_POINTS_9588: "Banja Luka"
+ VICTORY_POINTS_3984: "Kragujevac"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
