--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -27,7 +27,8 @@
  ww1_generic.6.t: "[From.GetName] Killed in Action"
  ww1_generic.6.d: "In bringing the battle to a successful conclusion, tragically [From.GetRank] [From.GetName] put [From.GetHerselfHimself] at way too much risk while leading [From.GetHerHis] men. [From.GetSheHeCap] has been shot, and the wounds were too much to survive. Our country won't forget [From.GetHerHis] sacrifice."
  ww1_generic.6.a: "[From.GetSheHeCap] served [From.GetHerHis] country well."
- ww1_generic.8.t: "The Great War: Conference"
+ ww1_generic.7.t: "[From.GetName] Died from the Disease"
+ ww1_generic.7.d: "[From.GetSheHeCap] couldn't recover from the disease [From.GetSheHe] got while commanding [From.GetHerHis] troops, and ultimately died. Our country won't forget [From.GetHerHis] sacrifice."
  ww1_generic.8.d: "The war is over. Peace is here, but at what cost? The lives of our brothers, fathers, and sons can never be brought back, but we can extract other consessions to hope to make up for them. The armistice is signed, and we intend on taking everything we can from the losers. Our enemies will rue the day they met the might of [Root.GetNameDef] and failed to meet the challenge. \n\n In this mod there is a truce that occurs that will establish a series of events that distribute land based on claims and cores. Disabling the Truce will affect the occuerence of events related to the consequences of the defeat of the opposing faction."
  ww1_generic.8.a: "Allow the truce."
  ww1_generic.8.b: "There will be no truce, only total victory!"
